--- a/package.json
+++ b/package.json
@@ -16,7 +16,9 @@
     "http-errors": "~1.6.3",
     "morgan": "~1.9.1",
     "mysql2": "^2.3.3-rc.0",
-    "rotating-file-stream": "^3.0.1"
+    "rotating-file-stream": "^3.0.1",
+    "save": "^2.4.0",
+    "sequelize": "^6.12.0-alpha.1"
   },
   "devDependencies": {
     "nodemon": "^2.0.13"
